# ccswitchmulti

./: CHANGELOG.md  README.md  README_DE.md  README_JA.md  README_ZH.md  codex-desktop-statsig-model-picker-root-cause-20260614.md  codex-multirouter-debug-notes.md  memory.md  package.json  pnpm-workspace.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc_issue.yml  feature_request.yml  question.yml
.github/workflows/: release.yml  supplemental-linux-release.yml
docs/: codex-hosted-tool-bridge-design.md  codex-spawn-agent-model-candidates.md
docs/guides/: ccswitchmulti-official-merge-release-20260614.md  codex-desktop-custom-model-visibility-en.md  codex-desktop-custom-model-visibility-ja.md  codex-desktop-custom-model-visibility-zh.md  codex-multirouter-desktop-model-picker-fix-20260614.md  codex-official-auth-preservation-guide-en.md  codex-official-auth-preservation-guide-ja.md  codex-official-auth-preservation-guide-zh.md  codex-unified-session-history-guide-en.md  codex-unified-session-history-guide-ja.md  codex-unified-session-history-guide-zh.md
docs/release-notes/: v3.16.4-11-zh.md  v3.16.4-14-zh.md  v3.16.4-15-zh.md  v3.16.4-16-zh.md  v3.16.4-3-zh.md  v3.16.4-5-zh.md  v3.16.4-7-zh.md  v3.16.4-en.md  v3.16.4-ja.md  v3.16.4-zh.md
scripts/: export-latest-ccswitchmulti.ps1
scripts/codex-history-tool/: README.md  codex_history_tool.py
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: claude_desktop_config.rs  codex_config.rs  codex_desktop.rs  codex_history_migration.rs  lib.rs  main.rs  openclaw_config.rs  provider.rs  readonly_mcp.rs  settings.rs  tray.rs
src-tauri/src/commands/: coding_plan.rs  misc.rs  model_fetch.rs  provider.rs  proxy.rs  settings.rs  usage.rs
src-tauri/src/database/: backup.rs  schema.rs
src-tauri/src/database/dao/: usage_rollup.rs
src-tauri/src/deeplink/: provider.rs  tests.rs
src-tauri/src/proxy/: external_openai_api.rs  forwarder.rs  handler_context.rs  handlers.rs  json_canonical.rs  media_sanitizer.rs  model_mapper.rs  response_processor.rs  server.rs
src-tauri/src/proxy/providers/: codex.rs  codex_chat_history.rs  codex_oauth_auth.rs  mod.rs  openai_compat.rs  transform_codex_chat.rs  transform_responses.rs
src-tauri/src/services/: coding_plan.rs  model_fetch.rs  proxy.rs  s3_sync.rs  skill.rs  subscription.rs  sync_protocol.rs  usage_cache.rs  usage_stats.rs  webdav_sync.rs
src-tauri/src/services/provider/: live.rs  mod.rs
src-tauri/tests/: provider_service.rs  skill_sync.rs
src/components/: ConfirmDialog.tsx  SubscriptionQuotaFooter.tsx  UsageScriptModal.tsx
src/config/: claudeDesktopProviderPresets.ts  claudeProviderPresets.ts  codexProviderPresets.ts  codexTemplates.ts  codingPlanProviders.ts  geminiProviderPresets.ts  hermesProviderPresets.ts  openclawProviderPresets.ts  opencodeProviderPresets.ts
src/hooks/: useCodexLocalRoutingNotice.ts  useProviderActions.ts  useSettingsForm.ts
src/lib/: codexMultiRouterWizard.ts  requestOverrides.ts  usageRange.ts
src/types/: proxy.ts  subscription.ts  usage.ts
src/utils/: codexModelContext.ts  codexPlanModelFetch.ts  codexSpawnAgentCandidates.ts
tests/components/: ClaudeDesktopProviderForm.test.tsx  ClaudeFormFields.test.tsx  CodexFormFields.test.tsx  CodexMultiRouterWizard.test.tsx  FullScreenPanelLayering.test.tsx  ProviderCardLayout.test.ts  ProviderForm.codexCatalog.test.ts  ProviderForm.codexPreset.test.tsx  ProviderList.test.tsx  ProviderPresetSelector.test.tsx  SelectItemIndicator.test.ts  SessionManagerPage.test.tsx  SkillsPageInstall.test.tsx
tests/config/: codexChatProviderPresets.test.ts  codexTemplates.test.ts
tests/hooks/: useCodexLocalRoutingNotice.test.tsx  useProviderActions.test.tsx  useUpdateProviderMutation.test.tsx
tests/integration/: App.test.tsx
tests/lib/: codexMultiRouterSync.test.ts  (+2 more)
(+66 files in other folders)
